crates/shiplog-redaction-policy/tests/snapshots/snapshot_tests__manual_event_manager.snap
---
source: crates/shiplog-redaction-policy/tests/snapshot_tests.rs
assertion_line: 185
expression: json
---
{
  "id": "6fd7b3f61b4e906678cee794ae14f6c9c4139f0f468d0fd69427aad30a4331e0",
  "kind": "Manual",
  "occurred_at": "2025-06-16T09:00:00Z",
  "actor": {
    "login": "developer",
    "id": 42
  },
  "repo": {
    "full_name": "acme/secret-project",
    "html_url": null,
    "visibility": "Private"
  },
  "payload": {
    "type": "Manual",
    "data": {
      "event_type": "Incident",
      "title": "Production database outage",
      "description": null,
      "started_at": "2025-06-16",
      "ended_at": "2025-06-16",
      "impact": null
    }
  },
  "tags": [
    "incident"
  ],
  "links": [],
  "source": {
    "system": "manual",
    "url": "https://internal.api/incidents/42",
    "opaque_id": null
  }
}
